# fractal

./: .gitignore  CmakeLists.txt  Makefile  debug.c  draw_lines.c  events.c  events_bonus.c  fdf  fractol  fractol.c  fractol.h  key_press.c  keys.h  lines.c  main.c  mandelbrot  mandelbrot.c  projection.c  re_main.c  rotation.c  struct.c
complex/: CMakeLists.txt  a.out  complex.h  cplx_hard_math.c  cplx_simple_operation.c  main.c  set_num.c
complex/src/: CMakeLists.txt  abs.c  cmplx_hard_math.c  cmplx_simple_operation.c  set_num.c
inc/: fractol.h
includes/: fractol.h
libcomp/: CMakeLists.txt  Makefile
libcomp/includes/: complex.h
libcomp/src/: abs.c  cmplx_hard_math.c  cmplx_simple_operation.c  set_num.c
libft/: CMakeLists.txt  Makefile  endl.c  error_notice.c  fract.c  free_str.c  ft_atoi.c  ft_atoi_base.c  ft_bzero.c  ft_fswap.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_iswhitespace.c  ft_itoa.c  ft_itoa_base.c  ft_ldel.c  ft_log.c  ft_lst_clear.c  ft_lstadd.c  ft_lstadd_end.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_pow_uint.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  (+46 more)
libft/inc/: get_next_line.h  libft.h
libft/src/: error_notice.c  fract.c  free_str.c  ft_atoi_base.c  ft_itoa_base.c  ft_putnbr_fd.c  ft_strsplit.c  read_file.c  vardump.c
minilibx/: mlx_get_color_value.c  mlx_pixel_put.c  mlx_string_put.c  mlx_xpm.c
minilibx/test/: main.c
minilibx_macos/: mlx_shaders.c  mlx_xpm.c
src/: CMakeLists.txt  draw.c  fractal_burning_ship.c  fractal_julia.c  fractal_mandelbrot.c  fractol.c  init.c  init_cl.c  kernel.cl  key_press.c  main.c  mouse.c  re_main.c  resume_cl_init.c  struct.c
